# sql-rules

./: .gitignore  Cargo.toml  README.md  cobertura.xml
src/: constraints.rs  error.rs  lib.rs  traits.rs
src/constraints/: column_constraints.rs  rust_keywords.rs  table_constraints.rs
src/constraints/column_constraints/: lowercase_column_name.rs  no_rust_keyword_column_name.rs  non_composite_primary_key_named_id.rs  singular_column_name.rs  snake_case_column_name.rs
src/constraints/foreign_key_constraints/: compatible_foreign_key.rs  extension_foreign_key_on_delete_cascade.rs  lowercase_foreign_key_name.rs  no_rust_keyword_foreign_key_name.rs  primary_key_reference_ends_with_id.rs  references_unique_index.rs
src/constraints/table_constraints/: has_primary_key.rs  lowercase_table_name.rs  no_forbidden_column_in_extension.rs  no_negation_check_constraint.rs  no_rust_keyword_table_name.rs  no_tautological_check_constraint.rs  non_redundant_extension_dag.rs  plural_table_name.rs  snake_case_table_name.rs  unique_check_constraint.rs  unique_column_names_in_extension_graph.rs  unique_foreign_key.rs  unique_unique_index.rs
src/error/: constraint_error_info.rs  rule_error_info.rs
src/error/constraint_error_info/: builder.rs
src/error/rule_error_info/: builder.rs
src/rules/: column_rules.rs  foreign_key_rules.rs  mod.rs  rust_keywords.rs  table_rules.rs
src/rules/column_rules/: lowercase_column_name.rs  (+7 more)
src/traits/: column_constraint.rs  column_rule.rs  constrainer.rs  foreign_key_rule.rs  rule_failure_information.rs  table_constraint.rs  table_rule.rs
(+22 files in other folders)
