[package]
name = "sql_constraints"
version = "0.1.0"
edition = "2024"
authors = ["Earth Metabolome Initiative"]
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/multi_ranged"
description = "Efficient data structures for representing and manipulating ranges of discrete values"
readme = "README.md"
keywords = ["range", "intervals", "data-structures", "numeric", "collections"]
categories = ["data-structures", "mathematics"]

[dependencies]
sql-traits = { git = "https://github.com/earth-metabolome-initiative/sql-traits", branch = "main" }
inflection-rs = {git = "https://github.com/LucaCappelletti94/inflection-rs", branch = "main"}
thiserror = "2.0"
heck = "0.5"

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[workspace.lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
